tests/golden/type_errors/array_filter_callback_arity.cd
filter([1], fun (left, right) { return true; });
