tests/golden/type_errors/array_filter_callback_arity.err
Type error at 1:13: expected 1 parameters but got 2
  filter([1], fun (left, right) { return true; });
              ^
